# s3_gateway_rs

./: .env  Cargo.toml  README.md
.github/workflows/: build.yaml
docker/: .env  Dockerfile  start.sh  template.env
docker-compose/: .env  docker-compose-develop.yml  docker-compose.yml
docker-compose/nginx/: nginx.conf
docker-compose/nginx/api/s3/: routes.conf
docker-compose/nginx/gateway/: default.conf
docker-compose/nginx/upstreams/: s3_gateway_service.conf  s3_service.conf
docs/: minio_s3_postman_collection.json
src/: lib.rs
src/controller/: s3.rs
