[package]
name = "s3_gateway_rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.137"
salvo = { version = "0.63.1", features=["cors", "proxy", "logging"] }
tokio = { version = "1", features = ["macros"] }
serde_json = "1.0.91"
log = "0.4.17"
simple_logger = "4.1.0"
minio = "0.1.0"
http = "0.2.9"
regex = "1.3.3"

[[bin]]
name = "server"
