[package]
name = "s3_gateway_rs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0.197"
salvo = { version = "0.66.0", features=["cors", "proxy", "logging"] }
tokio = { version = "1.36.0", features = ["macros"] }
serde_json = "1.0.114"
log = "0.4.20"
simple_logger = "4.3.3"
minio = "0.1.0"
http = "0.2.11"
regex = "1.3.3"
mime_guess = "2.0.4"

[[bin]]
name = "server"
